# lhr-codesnap

./: .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.md  install.ps1  install.sh  rust-toolchain.toml
.claude/rules/: project-rules.md
.claude/skills/lhr-codesnap/: SKILL.md
.claude/skills/lhr-codesnap/references/: architecture.md  commands.md
.github/workflows/: release.yml
docs/: architecture.md
src/: main.rs  skill.rs
src/index/: bitmap.rs  builder.rs  csr.rs  inverted.rs  mod.rs  trie.rs
src/output/: format.rs
src/query/: finder.rs  impacter.rs  mod.rs  tracer.rs
src/sync/: checker.rs  mod.rs
tests/: index_roundtrip.rs
