[package]
name = "codesnap"
version = "0.1.0"
edition = "2024"
description = "Zero-config semantic code intelligence for AI coding agents"
license = "MIT"
repository = "https://github.com/AEcru/lhr-codesnap"
authors = ["AEcru"]

[[bin]]
name = "codesnap"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
memmap2 = "0.9"
croaring = "2"
ahash = "0.8"
parking_lot = "0.12"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
